--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
 <head>
     <meta charset="utf-8">
     <title>Cat Exhibition</title>
-    <style>
-        a{
-            text-decoration: none;
-        }
-    </style>
+    <link rel='stylesheet' type="text/css" href="sidebar.css">
 </head>
 
 <body>
-   <h1><a id="headTitle" href="./index.html">고양이 전시관</a></h1>
-
-    <ul>
-        <li><a href="./instruction.html">소개</a></li>
-        <li><a href="./pictureForD.html">사진</a></li>
-        <li><a href="./drawingForD.html">그림</a></li>
-    </ul>
-
-    <img src="./catImg/CatUniverse.jpeg">
-
+    <div id="wrapper">
+        <div id="title">
+            <h1><a id="headTitle" href="./index.html">고양이 전시관</a></h1>
+        </div>
+        <div id="sidebarAndBoard">
+            <div id="sidebar">
+                <ul>
+                    <li><a href="./instruction.html">소개</a></li>
+                    <li><a href="./pictureForD.html">사진</a></li>
+                    <li><a href="./drawingForD.html">그림</a></li>
+                </ul>
+            </div>
+            <div id="board">
+                <img src="./catImg/CatUniverse.jpeg">
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
