--- a/pictureForD.html
+++ b/pictureForD.html
@@ -4,63 +4,74 @@
 <head>
     <meta charset="utf-8">
     <title>Cat Exhibition</title>
+    <link rel='stylesheet' type="text/css" href="sidebar.css">
 </head>
 
 <body>
-    <h1><a href="./index.html">고양이 전시관</a></h1>
+    <div id="wrapper">
+        <div id="title">
+            <h1><a id="headTitle" href="./index.html">고양이 전시관</a></h1>
+        </div>
+        <div id='sidebarAndBoard'>
+            <div id="sidebar">
+                <ul>
+                    <li><a href="./instruction.html">소개</a></li>
+                    <li><a href="./pictureForD.html">사진</a></li>
+                    <li><a href="./drawingForD.html">그림</a></li>
+                </ul>
+            </div>
 
-    <ul>
-        <li><a href="./instruction.html">소개</a></li>
-        <li><a href="./pictureForD.html">사진</a></li>
-        <li><a href="./drawingForD.html">그림</a></li>
-    </ul>
+            <div id="board">
+                <img src="./catImg/LookUp.jpg" height="500" alt="LookUp">
+                <p class="titleOfPicture">Look Up, 방은영</p>
 
-    <img src="./catImg/LookUp.jpg"  height="500" alt = "LookUp">
-    <p class="titleOfPicture">Look Up, 방은영</p>
+                <img src="./catImg/GreenEyes.jpeg" height="500" alt="GreenEyes">
+                <p class="titleOfPicture">Green Eyes, 방은영</p>
 
-    <img src="./catImg/GreenEyes.jpeg"  height="500" alt = "GreenEyes">
-    <p class="titleOfPicture">Green Eyes, 방은영</p>
+                <img src="./catImg/Wink.jpg" height="500" alt="Wink">
+                <p class="titleOfPicture">Wink, 방은영</p>
 
-    <img src="./catImg/Wink.jpg"  height="500" alt = "Wink">
-    <p class="titleOfPicture">Wink, 방은영</p>
+                <img src="./catImg/Yawn1.jpg" height="500" alt="Yawn1">
+                <p class="titleOfPicture">Yawn1, 방은영</p>
 
-    <img src="./catImg/Yawn1.jpg"  height="500" alt = "Yawn1">
-    <p class="titleOfPicture">Yawn1, 방은영</p>
+                <img src="./catImg/Yawn2.jpg" height="500" alt="Yawn2">
+                <p class="titleOfPicture">Yawn2, 방은영</p>
 
-    <img src="./catImg/Yawn2.jpg"  height="500" alt = "Yawn2">
-    <p class="titleOfPicture">Yawn2, 방은영</p>
+                <img src="./catImg/Sleep1.JPG" height="500" alt="Sleep1">
+                <p class="titleOfPicture">Sleep1, 방은영</p>
 
-    <img src="./catImg/Sleep1.JPG"  height="500" alt = "Sleep1">
-    <p class="titleOfPicture">Sleep1, 방은영</p>
+                <img src="./catImg/Sleep2.jpg" height="500" alt="Sleep2">
+                <p class="titleOfPicture">Sleep2, 방은영</p>
 
-    <img src="./catImg/Sleep2.jpg"  height="500" alt = "Sleep2">
-    <p class="titleOfPicture">Sleep2, 방은영</p>
+                <img src="./catImg/jelly1.jpg" height="500" alt="jelly1">
+                <p class="titleOfPicture">jelly1, 방은영</p>
 
-    <img src="./catImg/jelly1.jpg"  height="500" alt = "jelly1">
-    <p class="titleOfPicture">jelly1, 방은영</p>
+                <img src="./catImg/jelly2.jpg" height="500" alt="jelly2">
+                <p class="titleOfPicture">jelly2, 방은영</p>
 
-    <img src="./catImg/jelly2.jpg"  height="500" alt = "jelly2">
-    <p class="titleOfPicture">jelly2, 방은영</p>
+                <img src="./catImg/Beast.jpg" height="500" alt="Beast">
+                <p class="titleOfPicture">Small Beast, 방은영</p>
 
-    <img src="./catImg/Beast.jpg"  height="500" alt = "Beast">
-    <p class="titleOfPicture">Small Beast, 방은영</p>
+                <img src="./catImg/Wash.jpg" height="500" alt="Wash">
+                <p class="titleOfPicture">Wash, 방은영</p>
 
-    <img src="./catImg/Wash.jpg"  height="500" alt = "Wash">
-    <p class="titleOfPicture">Wash, 방은영</p>
+                <img src="./catImg/Sleepy.jpg" height="500" alt="Sleepy">
+                <p class="titleOfPicture">Sleepy, 방은영</p>
 
-    <img src="./catImg/Sleepy.jpg"  height="500" alt = "Sleepy">
-    <p class="titleOfPicture">Sleepy, 방은영</p>
+                <img src="./catImg/Rope.jpg" height="500" alt="Rope">
+                <p class="titleOfPicture">Rope of Dreamland, 방은영</p>
 
-    <img src="./catImg/Rope.jpg"  height="500" alt = "Rope">
-    <p class="titleOfPicture">Rope of Dreamland, 방은영</p>
+                <img src="./catImg/RoundlySleep1.jpg" height="500" alt="RoundlySleep1">
+                <p class="titleOfPicture">Sleep Roundly1, 방은영</p>
 
-    <img src="./catImg/RoundlySleep1.jpg"  height="500" alt = "RoundlySleep1">
-    <p class="titleOfPicture">Sleep Roundly1, 방은영</p>
+                <img src="./catImg/RoundlySleep2.jpg" height="500" alt="RoundlySleep2">
+                <p class="titleOfPicture">Sleep Roundly2, 방은영</p>
 
-    <img src="./catImg/RoundlySleep2.jpg"  height="500" alt = "RoundlySleep2">
-    <p class="titleOfPicture">Sleep Roundly2, 방은영</p>
-
-    <img src="./catImg/BaekSook.jpg"  height="500" alt = "BaekSook">
-    <p class="titleOfPicture">In fact, she is..., 방은영</p>
+                <img src="./catImg/BaekSook.jpg" height="500" alt="BaekSook">
+                <p class="titleOfPicture">In fact, she is..., 방은영</p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
