Change CSS layout

--- a/instruction.html
+++ b/instruction.html
@@ -25,7 +25,8 @@
                 <p>나만의 홈페이지를 갖고싶다는 생각을 종종 했습니다. 만약 제 첫 프로젝트를 한다면 그건 몇년 전 고양이별로 간 우리 고양이와 관련된 프로젝트였으면 했습니다. 또 우리 고양이를 모든
                     사람들에게
                     자랑하고 싶은 마음도 있었습니다. 그러한 생각들로 만들어진 것이 고양이 전시관입니다.</p>
-                <p>고양이 사진은 상업적인 용도로는 쓰지말아주세요.</p>
+                <p>고양이 사진은 상업적인 용도로는 쓰지말아주세요. 그 외 비상업적 목적으로 쓰고싶을 경우 아래 이메일로 연락해주세요.</p>
+                <p>e_yeong@naver.com</p>
             </div>
         </div>
     </div>
