--- a/pictureForD.html
+++ b/pictureForD.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Cat Exhibition</title>
+    <link rel='stylesheet' type="text/css" href="sidebar.css">
 </head>
 
 <body>
