--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 </ul>
             </div>
             <div id="board">
-                <img src="./catImg/CatUniverse.jpeg">
+                <div>
+                    <img class="background" src="./catImg/CatUniverse.jpeg">
+                </div>
             </div>
         </div>
     </div>
