--- a/pictureForD.html
+++ b/pictureForD.html
@@ -26,31 +26,31 @@
                 <p class="titleOfPicture">Look Up, 방은영</p>
 
                 <img src="./catImg/GreenEyes.jpeg" height="500" alt="GreenEyes">
-                <p class="titleOfPicture">Green Eyes, 방은영</p>
+                <p class="titleOfPicture">초록 눈, 방은영</p>
 
                 <img src="./catImg/Wink.jpg" height="500" alt="Wink">
                 <p class="titleOfPicture">Wink, 방은영</p>
 
                 <img src="./catImg/Yawn1.jpg" height="500" alt="Yawn1">
-                <p class="titleOfPicture">Yawn1, 방은영</p>
+                <p class="titleOfPicture">왕하품, 방은영</p>
 
                 <img src="./catImg/Yawn2.jpg" height="500" alt="Yawn2">
-                <p class="titleOfPicture">Yawn2, 방은영</p>
+                <p class="titleOfPicture">안했는데요, 방은영</p>
 
                 <img src="./catImg/Sleep1.JPG" height="500" alt="Sleep1">
-                <p class="titleOfPicture">Sleep1, 방은영</p>
+                <p class="titleOfPicture">고양이는 하루에 16시간 숙면을 취합니다. 1, 방은영</p>
 
                 <img src="./catImg/Sleep2.jpg" height="500" alt="Sleep2">
-                <p class="titleOfPicture">Sleep2, 방은영</p>
+                <p class="titleOfPicture">고양이는 하루에 16시간 숙면을 취합니다. 2, 방은영</p>
 
                 <img src="./catImg/jelly1.jpg" height="500" alt="jelly1">
-                <p class="titleOfPicture">jelly1, 방은영</p>
+                <p class="titleOfPicture">딸기초코맛, 방은영</p>
 
                 <img src="./catImg/jelly2.jpg" height="500" alt="jelly2">
-                <p class="titleOfPicture">jelly2, 방은영</p>
+                <p class="titleOfPicture">초코맛, 방은영</p>
 
                 <img src="./catImg/Beast.jpg" height="500" alt="Beast">
-                <p class="titleOfPicture">Small Beast, 방은영</p>
+                <p class="titleOfPicture">맹수, 방은영</p>
 
                 <img src="./catImg/Wash.jpg" height="500" alt="Wash">
                 <p class="titleOfPicture">Wash, 방은영</p>
@@ -59,13 +59,13 @@
                 <p class="titleOfPicture">Sleepy, 방은영</p>
 
                 <img src="./catImg/Rope.jpg" height="500" alt="Rope">
-                <p class="titleOfPicture">Rope of Dreamland, 방은영</p>
+                <p class="titleOfPicture">해와 달에서 동아줄을 잡은 호랑이 역을 맡음, 방은영</p>
 
                 <img src="./catImg/RoundlySleep1.jpg" height="500" alt="RoundlySleep1">
-                <p class="titleOfPicture">Sleep Roundly1, 방은영</p>
+                <p class="titleOfPicture">동글(하드웨어 아님), 방은영</p>
 
                 <img src="./catImg/RoundlySleep2.jpg" height="500" alt="RoundlySleep2">
-                <p class="titleOfPicture">Sleep Roundly2, 방은영</p>
+                <p class="titleOfPicture">A ammonite, 방은영</p>
 
                 <img src="./catImg/BaekSook.jpg" height="500" alt="BaekSook">
                 <p class="titleOfPicture">In fact, she is..., 방은영</p>
